--- a/style.css
+++ b/style.css
@@ -228,10 +228,11 @@ img {
 }
 
 .rightcont {
-    padding-top: 35px;
-    padding-bottom: 35px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     flex-direction: column;
     width: 26%;
+    justify-content: space-between;
 }
 
 .onee {
